# fractal

./: .gitattributes  .gitlab-ci.yml  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  fractal.doap  meson.build  meson_options.txt
.cargo/: config.toml
data/icons/: meson.build
po/: LINGUAS  (+39 more)
src/: application.rs  config.rs  config.rs.in  error_page.rs  error_page.ui  greeter.rs  greeter.ui  i18n.rs  idp_button.rs  login.rs  main.rs  meson.build  prelude.rs  secret.rs  session_list.rs  ui-resources.gresource.xml  user_facing_error.rs  utils.rs  window.rs  window.ui
src/account_switcher/: avatar_with_selection.rs  mod.rs  mod.ui  session_item.rs  user_entry.rs
src/components/: action_button.rs  action_button.ui  audio_player.rs  audio_player.ui  auth_dialog.rs  avatar.rs  badge.rs  button_row.rs  context_menu_bin.rs  custom_entry.rs  drag_overlay.rs  editable_avatar.rs  entry_row.rs  image_paintable.rs  in_app_notification.rs  label_with_widgets.rs  loading_listbox_row.rs  location_viewer.rs  media_content_viewer.rs  mod.rs  overlapping_box.rs  password_entry_row.rs  pill.rs  reaction_chooser.rs  room_title.rs  room_title.ui  scale_revealer.rs  spinner.rs  spinner_button.rs  spinner_button.ui  toast.rs  toastable_window.rs  toastable_window.ui  video_player.rs  video_player_renderer.rs
src/contrib/: qr_code.rs
src/contrib/qr_code_scanner/: camera.rs  camera_paintable.rs  mod.rs  qr_code_detector.rs
src/login/: advanced_dialog.rs  advanced_dialog.ui  homeserver_page.rs  idp_button.rs  idp_button.ui  login_advanced_dialog.rs  method_page.rs  method_page.ui  mod.rs  mod.ui  sso_page.rs  sso_page.ui
src/session/: avatar.rs  avatar_data.rs  event_source_dialog.rs  join_room_dialog.rs  media_viewer.rs  mod.rs  notifications.rs  room_list.rs  settings.rs  user.rs  view.rs
src/session/account_settings/: mod.rs  notifications_page.rs
src/session/account_settings/devices_page/: device.rs  device_item.rs  device_list.rs  device_row.rs  mod.rs
src/session/account_settings/security_page/: import_export_keys_subpage.rs  mod.rs
src/session/account_settings/user_page/: change_password_subpage.rs  deactivate_account_subpage.rs  log_out_subpage.rs  mod.rs
src/session/avatar/: data.rs  image.rs  mod.rs
src/session/content/: invite.rs  markdown_popover.rs  mod.rs
src/session/content/explore/: mod.rs  public_room.rs  public_room_list.rs  public_room_row.rs  server.rs  server_list.rs  server_row.rs  servers_popover.rs
src/session/content/room_details/: mod.rs
src/session/content/room_details/general_page/: mod.rs
src/session/content/room_details/history_viewer/: audio.rs  audio_row.rs  event.rs  file.rs  file_row.rs  media.rs  media_item.rs  mod.rs  timeline.rs
src/session/content/room_details/invite_subpage/: invitee.rs  invitee_list.rs  invitee_row.rs  mod.rs
src/session/content/room_details/member_page/: member_menu.rs  member_row.rs  mod.rs
src/session/content/room_history/: attachment_dialog.rs  divider_row.rs  item_row.rs  mod.rs  read_receipts_list.rs  typing_row.rs  verification_info_bar.rs
src/session/content/room_history/completion/: completion_popover.rs  completion_row.rs  mod.rs
src/session/content/room_history/message_row/: audio.rs  content.rs  file.rs  location.rs  media.rs  mod.rs  reaction.rs  reaction_list.rs  reply.rs  text.rs
src/session/content/room_history/state_row/: creation.rs  mod.rs  tombstone.rs
src/session/content/verification/: emoji.rs  identity_verification_widget.rs  session_verification.rs
src/session/create_dm_dialog/: dm_user.rs  dm_user_list.rs  mod.rs
src/session/model/: mod.rs  notifications.rs  room_list.rs  session.rs  settings.rs  user.rs
src/session/model/avatar/: data.rs  image.rs  mod.rs
src/session/model/room/: member.rs  member_list.rs  member_role.rs  mod.rs  power_levels.rs  room_type.rs  typing_list.rs
src/session/model/room/event/: mod.rs  reaction_group.rs  reaction_list.rs  read_receipts.rs
src/session/model/room/timeline/: mod.rs  timeline_item.rs  virtual_item.rs
src/session/model/sidebar/: item.rs  item_list.rs  list_model.rs  mod.rs  selection.rs
src/session/model/sidebar/category/: category_filter.rs  category_type.rs  mod.rs
src/session/model/sidebar/entry/: mod.rs
src/session/model/verification/: identity_verification.rs  verification_list.rs
src/session/room/: event.rs  event_actions.rs  highlight_flags.rs  item.rs  member.rs  member_list.rs  mod.rs  power_levels.rs  reaction_group.rs  reaction_list.rs  room_type.rs  timeline.rs  typing_list.rs
src/session/room/event/: event_actions.rs  mod.rs  read_receipts.rs  supported_event.rs  unsupported_event.rs
src/session/room/timeline/: mod.rs  timeline_day_divider.rs  timeline_item.rs  timeline_new_messages_divider.rs  timeline_placeholder.rs  timeline_spinner.rs  virtual_item.rs
src/session/room_creation/: mod.rs
src/session/sidebar/: category.rs  category_row.rs  category_type.rs  entry.rs  entry_row.rs  entry_type.rs  item_list.rs  mod.rs  room_row.rs  row.rs  selection.rs  sidebar_item.rs  sidebar_list_model.rs  verification_row.rs
src/session/sidebar/account_switcher/: add_account.rs  avatar_with_selection.rs  item.rs  mod.rs  user_entry.rs
src/session/sidebar/category/: mod.rs
src/session/verification/: identity_verification.rs  mod.rs  verification_list.rs
src/session/view/: event_source_dialog.rs  event_source_dialog.ui  join_room_dialog.rs  join_room_dialog.ui  media_viewer.rs  media_viewer.ui  mod.rs  room_creation.rs  room_creation.ui  session_view.rs  session_view.ui
src/session/view/account_settings/: mod.rs  mod.ui  notifications_page.rs  notifications_page.ui
src/session/view/content/: invite.rs  invite.ui  mod.rs  mod.ui
src/session/view/create_dm_dialog/: dm_user.rs  dm_user_list.rs  dm_user_row.rs  dm_user_row.ui  mod.rs  mod.ui
src/session/view/sidebar/: category_row.rs  entry_row.rs  mod.rs  mod.ui  room_row.rs  room_row.ui  row.rs  verification_row.rs
src/utils/: expression_list_model.rs  macros.rs  matrix.rs  media.rs  mod.rs  notifications.rs  sourceview.rs  template_callbacks.rs
(+205 files in other folders)
