[package]
name = "fractal"
version = "5.0.0-alpha1"
authors = ["Julian Sparber <julian@sparber.net>"]
edition = "2021"
rust-version = "1.65"

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

# Please keep dependencies sorted.
[dependencies]
ashpd = { version = "0.4.0-alpha.4", default-features = false, features = [
    "gtk4",
    "pipewire",
    "tracing",
    "tokio",
] }
async-stream = "0.3"
djb_hash = "0.1.3"
eyeball-im = "0.1.1"
futures = "0.3"
geo-uri = "0.2.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { version = "0.20.2", package = "gstreamer" }
gst_base = { version = "0.20.0", package = "gstreamer-base" }
gst_gtk = { version = "0.10.3", package = "gst-plugin-gtk4" }
gst_pbutils = { version = "0.20.0", package = "gstreamer-pbutils" }
gst_play = { version = "0.20.2", package = "gstreamer-play" }
gst_video = { version = "0.20.2", package = "gstreamer-video" }
html-escape = "0.2.11"
html2pango = "0.5.0"
image = "0.24"
indexmap = "1.6.2"
log = "0.4"
mime = "0.3.16"
mime_guess = "2.0.3"
num_enum = "0.5.6"
once_cell = "1.5"
oo7 = { version = "0.1.0-beta.3", default-features = false, features = [
    "native_crypto",
    "tokio",
    "tracing",
] }
pulldown-cmark = "0.9.2"
qrcode = "0.12.0"
rand = "0.8"
regex = "1.5.4"
rqrr = "0.5"
secular = { version = "1.0.1", features = ["bmp", "normalization"] }
serde = "1.0.130"
serde_json = "1.0"
thiserror = "1.0.25"
tokio = { version = "1.15", features = ["rt", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3"
url = "2.2"

[dependencies.adw]
package = "libadwaita"
version = "0.3.1"
features = ["v1_3"]

[dependencies.gtk]
package = "gtk4"
version = "0.6.2"
features = ["v4_6"]

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "a8204987be9a2696be183c3954a8569fa2141661"
features = [
    "socks",
    "sso-login",
    "markdown",
    "qrcode",
    "experimental-timeline",
    "image-rayon",
]

[dependencies.matrix-sdk-sled]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "a8204987be9a2696be183c3954a8569fa2141661"
features = ["crypto-store"]

[dependencies.ruma]
# version = "0.8.2"
git = "https://github.com/ruma/ruma.git"
rev = "8eea3e05490fa9a318f9ed66c3a75272e6ef0ee5"
features = ["unstable-unspecified", "client-api-c", "unstable-sanitize"]

[dependencies.shumate]
package = "libshumate"
version = "0.3.0"

[dependencies.sourceview]
package = "sourceview5"
version = "0.6.0"

# FIXME: Remove when matrix-sdk dependencies don't pin zeroize (conflict with oo7)
[patch.crates-io.x25519-dalek]
git = "https://github.com/A6GibKm/x25519-dalek"
rev = "9f19028c34107eea87d37bcee2eb2b350ec34cfe"
