[package]
name = "fractal"
version = "5.0.0-alpha1"
authors = ["Julian Sparber <julian@sparber.net>"]
edition = "2021"
rust-version = "1.65"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

# Please keep dependencies sorted.
[dependencies]
ashpd = { version = "0.4", default-features = false, features = [
    "gtk4",
    "pipewire",
    "tracing",
    "tokio",
] }
async-stream = "0.3"
djb_hash = "0.1"
eyeball-im = "0.2"
futures = "0.3"
geo-uri = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { version = "0.20", package = "gstreamer" }
gst_base = { version = "0.20", package = "gstreamer-base" }
gst_gtk = { version = "0.10", package = "gst-plugin-gtk4" }
gst_pbutils = { version = "0.20", package = "gstreamer-pbutils" }
gst_play = { version = "0.20", package = "gstreamer-play" }
gst_video = { version = "0.20", package = "gstreamer-video" }
html-escape = "0.2"
html2pango = "0.5"
image = "0.24"
indexmap = "1"
log = "0.4"
mime = "0.3"
mime_guess = "2"
once_cell = "1"
oo7 = { version = "0.1", default-features = false, features = [
    "native_crypto",
    "tokio",
    "tracing",
] }
pulldown-cmark = "0.9"
qrcode = "0.12"
rand = "0.8"
regex = "1"
rmp-serde = "1"
rqrr = "0.6"
secular = { version = "1", features = ["bmp", "normalization"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3"
url = "2"

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_3"]

[dependencies.gtk]
package = "gtk4"
version = "0.6"
features = ["v4_10"]

[dependencies.matrix-sdk]
git = "https://github.com/zecakeh/matrix-rust-sdk.git"
rev = "4002c7fad13bf058962976d9b08e0e03b70b49b2"
features = [
    "socks",
    "sso-login",
    "markdown",
    "qrcode",
    "experimental-timeline",
    "image-rayon",
]

[dependencies.ruma]
# version = "0.8.2"
git = "https://github.com/ruma/ruma.git"
rev = "0143bd9b9f5dcfcaa835afb76f342c12f014f945"
features = ["unstable-unspecified", "client-api-c", "unstable-sanitize"]

[dependencies.shumate]
package = "libshumate"
version = "0.3"

[dependencies.sourceview]
package = "sourceview5"
version = "0.6"

# FIXME: Remove when matrix-sdk dependencies don't pin zeroize (conflict with oo7)
[patch.crates-io.x25519-dalek]
git = "https://github.com/A6GibKm/x25519-dalek"
rev = "9f19028c34107eea87d37bcee2eb2b350ec34cfe"
