[package]
name = "fractal"
version = "5.0.0-beta2"
authors = ["Julian Sparber <julian@sparber.net>"]
edition = "2021"
rust-version = "1.70"
publish = false

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

# Please keep dependencies sorted.
[dependencies]
ashpd = { version = "0.4", default-features = false, features = [
    "gtk4",
    "pipewire",
    "tracing",
    "tokio",
] }
djb_hash = "0.1"
eyeball-im = "0.2"
futures-channel = "0.3"
futures-util = "0.3"
geo-uri = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { version = "0.20", package = "gstreamer" }
gst_base = { version = "0.20", package = "gstreamer-base" }
gst_gtk = { version = "0.10", package = "gst-plugin-gtk4" }
gst_pbutils = { version = "0.20", package = "gstreamer-pbutils" }
gst_play = { version = "0.20", package = "gstreamer-play" }
gst_video = { version = "0.20", package = "gstreamer-video" }
html-escape = "0.2"
html2pango = "0.5"
html5gum = "0.5"
image = "0.24"
indexmap = "2"
mime = "0.3"
mime_guess = "2"
once_cell = "1"
oo7 = { version = "0.2", default-features = false, features = [
    "native_crypto",
    "tokio",
    "tracing",
] }
pulldown-cmark = "0.9"
qrcode = "0.12"
rand = "0.8"
regex = "1"
rmp-serde = "1"
rqrr = "0.6"
secular = { version = "1", features = ["bmp", "normalization"] }
serde = "1"
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_3"]

[dependencies.gtk]
package = "gtk4"
version = "0.6"
features = ["v4_10"]

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "4643bae28445e058080896a280083b32fd403146"
features = [
    "socks",
    "sso-login",
    "markdown",
    "qrcode",
    "image-rayon",
]

[dependencies.matrix-sdk-ui]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "4643bae28445e058080896a280083b32fd403146"
default-features = false
features = ["e2e-encryption", "native-tls"]

[dependencies.ruma]
# version = "0.8.2"
git = "https://github.com/ruma/ruma.git"
rev = "f1772ae5bc1d849655498f51b0fec7b0ef10e339"
features = [
    "unstable-unspecified",
    "client-api-c",
    "unstable-sanitize", 
    "compat-key-id",
    "compat-user-id",
    "compat-empty-string-null",
    "compat-null",
    "compat-optional",
    "compat-unset-avatar",
    "compat-get-3pids",
]

[dependencies.shumate]
package = "libshumate"
version = "0.3"

[dependencies.sourceview]
package = "sourceview5"
version = "0.6"
